// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar should render actions toolbar 1`] = `
<div
  className="tc-list-toolbar"
>
  <nav
    className="tc-actionbar-container nav"
  >
    <div
      className="navbar-left"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        id="my-toolbar-actions-add"
        onClick={[Function]}
        onMouseDown={[Function]}
        role={null}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="tc-svg-icon"
          focusable="false"
          title={null}
        >
          <use
            xlinkHref="#talend-plus"
          />
        </svg>
        <span>
          Add
        </span>
      </button>
    </div>
  </nav>
</div>
`;

exports[`Toolbar should render actions toolbar with selected items 1`] = `
<div
  className="tc-list-toolbar"
>
  <nav
    className="tc-actionbar-container nav"
  >
    <div
      className="navbar-left"
    >
      <span
        className="tc-actionbar-selected-count"
      >
        1
         selected
      </span>
      <button
        className="btn btn-default"
        disabled={false}
        id="my-toolbar-actions-delete"
        onClick={[Function]}
        onMouseDown={[Function]}
        role={null}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="tc-svg-icon"
          focusable="false"
          title={null}
        >
          <use
            xlinkHref="#talend-trash"
          />
        </svg>
        <span>
          Delete selection
        </span>
      </button>
    </div>
  </nav>
</div>
`;

exports[`Toolbar should render display mode selector 1`] = `
<div
  className="tc-list-toolbar"
>
  <div
    className="navbar navbar-default"
    role="toolbar"
  >
    <div
      className="container-fluid"
    >
      <p
        className="navbar-text"
      >
        <label
          htmlFor="my-toolbar-display-mode"
        >
          Display:
        </label>
      </p>
      <ul
        className="nav navbar-nav"
        role={null}
      >
        <li
          className="dropdown"
          style={undefined}
        >
          <a
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle"
            href="#"
            id="my-toolbar-display-mode"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <svg
              aria-hidden="true"
              className="tc-svg-icon"
              focusable="false"
              title={null}
            >
              <use
                xlinkHref="#talend-table"
              />
            </svg>
             
            <span
              className="caret"
            />
          </a>
          <ul
            aria-labelledby="my-toolbar-display-mode"
            className="dropdown-menu"
            role="menu"
          >
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                id="my-toolbar-display-mode-table"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                <svg
                  aria-hidden="true"
                  className="tc-svg-icon"
                  focusable="false"
                  title={null}
                >
                  <use
                    xlinkHref="#talend-table"
                  />
                </svg>
                Table
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                id="my-toolbar-display-mode-large"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                <svg
                  aria-hidden="true"
                  className="tc-svg-icon"
                  focusable="false"
                  title={null}
                >
                  <use
                    xlinkHref="#talend-expanded"
                  />
                </svg>
                Expanded
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Toolbar should render empty toolbar 1`] = `
<div
  className="tc-list-toolbar"
/>
`;

exports[`Toolbar should render filter form 1`] = `
<div
  className="tc-list-toolbar"
>
  <div
    className="navbar navbar-default"
    role="toolbar"
  >
    <div
      className="container-fluid"
    >
      <button
        className="navbar-right btn btn-link"
        disabled={false}
        id="my-toolbar-filter"
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseOver={[Function]}
        role={null}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="tc-svg-icon"
          focusable="false"
          title={null}
        >
          <use
            xlinkHref="#talend-search"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Toolbar should render pagination 1`] = `
<div
  className="tc-list-toolbar"
>
  <div
    className="navbar navbar-default"
    role="toolbar"
  >
    <div
      className="container-fluid"
    >
      <p
        className="navbar-text"
      >
        <label
          htmlFor="my-toolbar-pagination-size"
        >
          Show:
        </label>
      </p>
      <ul
        className="nav navbar-nav"
        role={null}
      >
        <li
          className="dropdown"
          style={undefined}
        >
          <a
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle"
            href="#"
            id="my-toolbar-pagination-size"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            5
             
            <span
              className="caret"
            />
          </a>
          <ul
            aria-labelledby="my-toolbar-pagination-size"
            className="dropdown-menu"
            role="menu"
          >
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                5
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                10
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                20
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                50
              </a>
            </li>
          </ul>
        </li>
        <li
          className="btn-link"
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            id="my-toolbar-pagination-nav-to-first"
            onClick={[Function]}
            role="button"
          >
            <svg
              aria-hidden="true"
              className="tc-svg-icon"
              focusable="false"
              title={null}
            >
              <use
                xlinkHref="#talend-chevron-end"
              />
            </svg>
          </a>
        </li>
        <li
          className="btn-link"
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            id="my-toolbar-pagination-nav-to-prev"
            onClick={[Function]}
            role="button"
          >
            <svg
              aria-hidden="true"
              className="tc-svg-icon"
              focusable="false"
              title={null}
            >
              <use
                xlinkHref="#talend-chevron-left"
              />
            </svg>
          </a>
        </li>
        <li
          className="disabled"
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            onClick={[Function]}
            role="button"
            style={
              Object {
                "pointerEvents": "none",
              }
            }
            tabIndex={-1}
          >
            <span
              className="btn-link"
            >
              2
              /
              3
            </span>
          </a>
        </li>
        <li
          className="btn-link"
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            id="my-toolbar-pagination-nav-to-next"
            onClick={[Function]}
            role="button"
          >
            <svg
              aria-hidden="true"
              className="tc-svg-icon"
              focusable="false"
              title={null}
            >
              <use
                xlinkHref="#talend-chevron-left"
              />
            </svg>
          </a>
        </li>
        <li
          className="btn-link"
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            id="my-toolbar-pagination-nav-to-last"
            onClick={[Function]}
            role="button"
          >
            <svg
              aria-hidden="true"
              className="tc-svg-icon"
              focusable="false"
              title={null}
            >
              <use
                xlinkHref="#talend-chevron-end"
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Toolbar should render select all checkbox 1`] = `
<div
  className="tc-list-toolbar"
>
  <div
    className="navbar navbar-default"
    role="toolbar"
  >
    <div
      className="container-fluid"
    >
      <form
        className="navbar-form navbar-left"
      >
        <div
          className="checkbox-inline navbar-text"
        >
          <label
            className="tc-list-toolbar-select-all"
            htmlFor={undefined}
          >
            <input
              checked={false}
              disabled={false}
              id={undefined}
              onChange={[Function]}
              type="checkbox"
            />
            <span>
              Select All
            </span>
          </label>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Toolbar should render sort selector 1`] = `
<div
  className="tc-list-toolbar"
>
  <div
    className="navbar navbar-default"
    role="toolbar"
  >
    <div
      className="container-fluid"
    >
      <p
        className="navbar-text"
      >
        <label
          htmlFor="my-toolbar-sort-by"
        >
          Sort by:
        </label>
      </p>
      <ul
        className="nav navbar-nav"
        role={null}
      >
        <li
          className="dropdown"
          style={undefined}
        >
          <a
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle"
            href="#"
            id="my-toolbar-sort-by"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            Id
             
            <span
              className="caret"
            />
          </a>
          <ul
            aria-labelledby="my-toolbar-sort-by"
            className="dropdown-menu"
            role="menu"
          >
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                id="my-toolbar-sort-by-item-id"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Id
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                id="my-toolbar-sort-by-item-name"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Name
              </a>
            </li>
          </ul>
        </li>
        <li
          className=""
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            id="my-toolbar-sort-order"
            onClick={[Function]}
            role="button"
          >
            Descending
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
